--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,6 +28,6 @@ jobs:
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - run: |
-        docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/sample-webapi:${{ github.sha }} -t sample-webapi:$(date +%s)
+        docker build . --file sample-webapi/Dockerfile -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/sample-webapi:${{ github.sha }} -t sample-webapi:$(date +%s)
         docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/sampleapp:${{ github.sha }}
         
