--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,5 +29,5 @@ jobs:
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - run: |
         docker build . --file sample-webapi/Dockerfile -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/sample-webapi:${{ github.sha }} -t sample-webapi:$(date +%s)
-        docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/sampleapp:${{ github.sha }}
+        docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/sample-webapi:${{ github.sha }}
         
