--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -3,11 +3,11 @@
 
 name: .NET
 
-# on:
+on:
 #   push:
 #     branches: [ "main" ]
-#   pull_request:
-#     branches: [ "main" ]
+  pull_request:
+     branches: [ "main" ]
 
 jobs:
   build:
